web/public/css/header.less
#header {
  background: white;
  font-family: 'Lucida Grande', 'Lucida Sans', 'Lucida Sans Unicode', sans-serif;
  position: relative;
  z-index: 900;
}

.header-container {
  text-align: center;
}

.cd-logo {
  background-image: url("../img/logo.png");
  background-repeat: no-repeat;
  height: 4em;
  width: 15em;
  background-size: contain;
  float: left;
  margin-top: 45px;
  margin-left: 13px;
}

.cd-mobile-logo-container {
  width: 100%;
  margin: 0 auto;
  text-align: center;

}

.cd-mobile-logo {
  margin-top: 30px;
  display: inline-block;
  background-image: url("../img/logo.png");
  background-repeat: no-repeat;
  height: 4em;
  width: 15em;
  background-size: contain;
  display: none;
}

.cd-header-button-group {
  display: inline-block;
  float: right;
}

.cd-header-button {
  width: 10em;
  display: inline-block;
  vertical-align: top;
  text-align: center;
  color: white;
  padding: 5px;
  line-height: 1.8em;
  height: 2.6em;
  font-size: 14px;
  text-transform: uppercase;
  cursor: pointer;
}

.cd-header-button a {
  color: white;
  font-size: 14px;
}

.cd-active-tab {
  height: 3.8em;
  line-height: 2.85em;
}

.language-selector {
  width: 14.5em;
  float: right;
  margin-top: 5px;
  display: inline-block;
}

.alert-message {

  &.active {
    min-height: 45px;
    height: auto !important;
    line-height: 20px;
    text-align: left;
    position: relative !important;
  }

  .container {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  p {
    width: 95%;
    display: inline-block;
  }
}

.a-no-float {
  float: none !important;
  &:hover {
    text-decoration: underline !important;
  }
}

.cd-color-1, html .container .cd-color-1 {
  background-color: #61C93F;
}

.cd-color-2, html .container .cd-color-2 {
  background-color: #2E7AC7;
}

.cd-color-3, html .container .cd-color-3 {
  background-color: #FBCC33;
}

.cd-color-4, html .container .cd-color-4 {
  background-color: #ED462F;
}

.cd-color-5, html .container .cd-color-5 {
  background-color: #2C9CFB;
}

.cd-color-6, html .container .cd-color-5 {
  background-color: orange;
}

#intercom-container .intercom-launcher {
  visibility: visible !important;
}

